// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bugfix.spec 2023-03-31T04:00:00+00:00 1`] = `
{
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T04:00:00+00:00",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec 2023-03-31T04:00:00.000Z 1`] = `
{
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T04:00:00.000Z",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec 2023-03-31T04:00:00.800Z 1`] = `
{
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T04:00:00.800Z",
  "toISOString": "2023-03-31T04:00:00.800Z",
  "toJSON": "2023-03-31T04:00:00.800Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec 2023-03-31T12:00:00 1`] = `
{
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T12:00:00",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec 2023-03-31T12:00:00+08:00 1`] = `
{
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T12:00:00+08:00",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec Fri, 31 Mar 2023 04:00:00 GMT 1`] = `
{
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "Fri, 31 Mar 2023 04:00:00 GMT",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec Fri, 31 Mar 2023 12:00:00 1`] = `
{
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "Fri, 31 Mar 2023 12:00:00",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec Fri, 31-Mar-2023 04:00:00 GMT 1`] = `
{
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "Fri, 31-Mar-2023 04:00:00 GMT",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec Fri, 31-Mar-2023 12:00:00 1`] = `
{
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "Fri, 31-Mar-2023 12:00:00",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;
